CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

PROJECT(examples)
SET(SUPER_LIB ../utils.c ../lumberjack.c)
#SET(CXX_FORMAT_SIGNEDNESS "-Wformat-signedness")
SET(CXX_FORMAT_SECURITY "-Werror=format-security")
SET(CXX_STACK_PROTECTOR "-fstack-protector-all")
SET(CXX_FLAGS_DEBUG "-O0")
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O1 -ggdb -Wall -Wextra -DNETDATA_INTERNAL_CHECKS=1 -DNETDATA_VERIFY_LOCKS=1 ${CXX_FORMAT_SIGNEDNESS} ${CXX_FORMAT_SECURITY} ${CXX_STACK_PROTECTOR} ${CXX_FLAGS_DEBUG}")
set (CMAKE_CXX_STANDARD 11)

ADD_EXECUTABLE(client client.c ${SUPER_LIB})
ADD_EXECUTABLE(client_cpp client_thread.cpp ${SUPER_LIB})

TARGET_INCLUDE_DIRECTORIES(client PUBLIC ..)
TARGET_INCLUDE_DIRECTORIES(client_cpp PUBLIC ..)